Green test suite

--- a/cookbooks/ci_infrastructure_cf/stubs/cloudfoundry.stub.yml
+++ b/cookbooks/ci_infrastructure_cf/stubs/cloudfoundry.stub.yml
@@ -143,7 +143,7 @@ networks:
   cf2:
     type: manual
     subnets:
-      default_unused:
+      - name: default_unused
         range: 10.0.0.0/23
         gateway: 10.0.0.1
         reserved: []
