--- a/spec/assets/cloudfoundry.stub.yml
+++ b/spec/assets/cloudfoundry.stub.yml
@@ -1,4 +1,5 @@
 ---
+director_uuid: DELETE_ME
 meta:
   bosh-network:
     cidr: 10.0.0.0/8
@@ -30,10 +31,10 @@ networks:
   floating:
     cloud_properties:
       net_id: MICROBOSH_SUBNET_ID
-      type: vip
+    type: vip
   cf1:
     subnets:
-      default_unused:
+      - name: default_unused
         range: 10.0.0.0/8
         gateway: 1.1.1.1
         reserved:
@@ -58,7 +59,7 @@ networks:
   cf2:
     type: manual
     subnets:
-      default_unused:
+      - name: default_unused
         range: 10.0.0.0/23
         gateway: 10.0.0.1
         reserved: []
