fixes issues in openstack Vagrantfile example

--- a/openstack/Vagrantfile
+++ b/openstack/Vagrantfile
@@ -7,14 +7,15 @@ require 'rubygems'
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.ssh.private_key_path = "vagrant.pem"
+  config.ssh.private_key_path = "~/.ssh/vagrant.pem"
 
   config.vm.box = "dummy"
   config.vm.box_url = 'https://github.com/cloudbau/vagrant-openstack-plugin/raw/master/dummy.box'
 
   config.berkshelf.enabled = true
+config.berkshelf.berksfile_path = '../Berksfile'
   config.omnibus.chef_version = :latest
-
+	
 
   config.vm.provider :openstack do |os|
     os.server_name = "Jenkins CI Infrastructure For CF"
@@ -22,7 +23,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     os.api_key      =ENV['OS_PASSWORD']
     os.flavor       =ENV['OS_FLAVOR']
     os.image        =ENV['OS_IMAGE']
-    os.endpoint     =ENV['OS_AUTH_URL']
+    os.endpoint     = "#{ENV['OS_AUTH_URL'].strip}/tokens"
     os.keypair_name = ENV['OS_KEYPAIR_NAME']
     os.ssh_username = "ubuntu"           # login for the VM
 
@@ -36,7 +37,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # }                                          # optional
     # os.availability_zone  = "az0001"           # optional
     os.security_groups    = [ 'ssh', 'jenkins' ]    # optional
-    os.tenant             = ENV['TENANT']
+    os.tenant             = ENV['OS_TENANT_NAME']
     os.floating_ip        = ENV['JENKINS_FLOATING_IP']
   end
 
@@ -170,7 +171,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # some recipes and/or roles.
   #
   # config.vm.provision :chef_solo do |chef|
-  #   chef.cookbooks_path = "../my-recipes/cookbooks"
   #   chef.roles_path = "../my-recipes/roles"
   #   chef.data_bags_path = "../my-recipes/data_bags"
   #   chef.add_recipe "mysql"
