--- a/openstack/Vagrantfile
+++ b/openstack/Vagrantfile
@@ -13,16 +13,15 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box_url = 'https://github.com/cloudbau/vagrant-openstack-plugin/raw/master/dummy.box'
 
   config.berkshelf.enabled = true
-config.berkshelf.berksfile_path = '../Berksfile'
+  config.berkshelf.berksfile_path = '../Berksfile'
   config.omnibus.chef_version = :latest
-	
 
   config.vm.provider :openstack do |os|
     os.server_name = "Jenkins CI Infrastructure For CF"
-    os.username     =ENV['OS_USERNAME']
-    os.api_key      =ENV['OS_PASSWORD']
-    os.flavor       =ENV['OS_FLAVOR']
-    os.image        =ENV['OS_IMAGE']
+    os.username     = ENV['OS_USERNAME']
+    os.api_key      = ENV['OS_PASSWORD']
+    os.flavor       = ENV['OS_FLAVOR']
+    os.image        = ENV['OS_IMAGE']
     os.endpoint     = "#{ENV['OS_AUTH_URL'].strip}/tokens"
     os.keypair_name = ENV['OS_KEYPAIR_NAME']
     os.ssh_username = "ubuntu"           # login for the VM
@@ -41,6 +40,12 @@ config.berkshelf.berksfile_path = '../Berksfile'
     os.floating_ip        = ENV['JENKINS_FLOATING_IP']
   end
 
+  $script = <<SCRIPT
+  sudo apt-get update
+  sudo apt-get -y install build-essential 
+SCRIPT
+
+  config.vm.provision "shell", inline: $script
 
   config.vm.provision :chef_solo do |chef|
     chef.json = {
@@ -51,8 +56,8 @@ config.berkshelf.berksfile_path = '../Berksfile'
             name: 'openstack',
             user: ENV['OS_USERNAME'],
             pass: ENV['OS_PASSWORD'],
-            tenant: ENV['OS_TENANT'],
-            auth_url: ENV['OS_AUTH_URL'],
+            tenant: ENV['OS_TENANT_NAME'],
+            auth_url: "#{ENV['OS_AUTH_URL'].strip}/tokens"
             },
             address:{
               ip: ENV['MICROBOSH_IP'],
@@ -88,9 +93,6 @@ config.berkshelf.berksfile_path = '../Berksfile'
               }
             }
           }
-        },
-        hosts: {
-          '1.2.3.4' => 'example.com'
         }
       }
     }
